--- a/resources/global/css/udp.css
+++ b/resources/global/css/udp.css
@@ -17,12 +17,12 @@
 
 UniversalDisplayControl
 {
-	 -fx-background-color: 
-	  	-fx-base-component,
-        linear-gradient(#38424b 0%, #1f2429 20%, #191d22 100%),
-        linear-gradient(#20262b, #191d22),
-        radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
-       
+	
+	-fx-background-color:
+		-fx-base-component,  linear-gradient(#4d4d4d 0%, #1a1a1a 20%, #191d22 100%),
+		  linear-gradient(#4d4d4d, #191d22),
+		  radial-gradient(center 50% 0%, radius 25%, rgba(66, 66, 66, 0.9), rgba(255,255,255,0));
+
     -fx-background-radius: 5,4,3,5;
     -fx-background-insets: 0,1,2,0;
     -fx-text-fill: white;
